# Changelog
All notable changes to this project will be documented in this file.

## [r014] - 2021-08-26
- Fix the action won't stop flash when using spell binding.

## [r012] - 2021-07-28
- Fix the UnitWatch Panel continue show removed units.

## [1.1.0] - 2021-03-16
- Auto Hide Macro Condition List Added in the Menu.

## [1.0.0] - 2020-12-04
### Added
- The AshToAsh is created.