@@ -4,10 +4,10 @@ if not L then return end
 L["Add"]                        = "增加"
 L["Aura Black List"]            = "增益黑名单"
 L["Class Buff List"]            = "职业增益名单"
-L["Enlarge Debuff List"] 		= "重点减益名单"
+L["Enlarge Debuff List"]        = "重点减益名单"
 L["Aura Priority List"]         = "增益优先列表"
 L["Current Specialization"]     = "当前专精"
-L["Current Settings"] 			= "当前配置"
+L["Current Settings"]           = "当前配置"
 L["All Specialization"]         = "所有专精"
 L["Next"]                       = "下一步"
 L["Close"]                      = "关闭"
@@ -76,3 +76,7 @@ L["Auto Hide"]                  = "自动隐藏"
 L["Add Macro Condition"]        = "添加宏条件"
 L["Please select the macro condition"] = "请点击选择自动隐藏宏条件"
 L["Do you want delete the macro condition"] = "是否删除该自动隐藏宏条件"
+
+L["All Check"]                  = "全选择"
+L["All Clear"]                  = "全取消"
+L["Do you want copy the current panel?"] = "是否复制当前面板?"
