@@ -1,6 +1,11 @@
 # Changelog
 All notable changes to this project will be documented in this file.
 
+## [r015] - 2021-09-08
+- Fix the grop, role, class filter be reset.
+- Panel can be clone now, choose add panel, the system will ask you.
+- More options added into the menu.
+
 ## [r014] - 2021-08-26
 - Fix the action won't stop flash when using spell binding.
 
